[package]
name = "light-ui"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.2"
web-sys = "0.3.66"
js-sys = "0.3.66"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.39"
yew-router = "0.18.0"
log = "0.4.20"
cid = "0.11.0"
multibase = "0.9.1"
multihash = "0.19.1"
wasm-bindgen = "0.2.90"

light-utils = { path = "utils" }


[build-dependencies]
tauri-cli = { version = "2.0.0-beta.6" }
tauri-build = { version = "2.0.0-beta.6", features = [] }

[workspace.dependencies]
wasm-bindgen = "0.2.89"
cid = "0.11.0"
multibase = "0.9.1"
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bip39 = {version = "2.0.0"}
bip32 = "0.5.1"
rand_core = { version = "0.6.4", features = ["std"] }
bitcoin_hashes = "0.13.0"
bitcoin = "0.31.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3.29"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8.8"
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
env_logger = "0.11.0"  
chrono = "0.4.31"  
libp2p = { version = "0.53.2", features = [  
    "async-std",  
    "mdns",  
    "tokio",  
    "noise",  
    "macros",  
    "tcp",  
    "yamux",  
    "quic",  
    "cbor",  
    "request-response",  
    "gossipsub",
    "identify",
    "ping",
    "relay"
] }
cfb-mode = "0.8.2"
cfg-if = "1.0.0"
log = "0.4.20"
log4rs = "1.2.0"
futures-util = { version = "0.3.29", default-features = false, features = [
    "alloc",
] }
thiserror = "1.0.50"
triggered = "0.1.2"
workflow-log = { version = "0.11" }
ctrlc = "3.4.1"
intertrait = "0.2.2"
num_cpus = "1.16.0"
borsh = { version = "1.3.1", features = ["rc"] }
h2 = "0.4.2"
itertools = "0.12.1"
parking_lot = "0.12.1"
yew = { version = "0.21.0", features = ["csr"] }
serde-wasm-bindgen = "0.6.2"
rusqlite = {version="0.31.0", features = ["bundled"] }
wasm-logger = "0.2.0"
prost = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rayon = "1.8.0"
regex = "1.10.2"
ripemd = { version = "0.1.3", default-features = false }
rlimit = "0.10.1"
rocksdb = "0.22.0"
secp256k1 = { version = "0.28", features = [
    "global-context",
    "rand-std",
    "serde",
] } 
seqlock = "0.2.0"
tokio-stream = "0.1.14"
tonic = { version = "0.11", features = ["tls", "gzip", "transport"] }
tonic-build = { version = "0.11", features = ["prost"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
hex = "0.4.3"
hmac = { version = "0.12.1", default-features = false }
indexmap = "2.1.0"
keyring = "2" 
async-channel = "2.0.0"
event-listener = "5.0.0"
faster-hex = "0.9.0"
ipnet = "2.9.0"
smallvec = { version = "1.11.1", features = ["serde"] }
bincode = { version = "1.3.3", default-features = false }
criterion = { version = "0.5.1", default-features = false }
hyper = "1.1.0"
pin-project-lite = "0.2.13"
tower-http = { version = "0.5", features = [
    "map-response-body",
    "map-request-body",
] }
tower = "0.4.7"

tauri-cli = { version = "2.0.0-beta.6" }
tauri-build = { version = "2.0.0-beta.6", features = [] }

tauri = {version = "2.0.0-beta.8", features = ["devtools"] }
tauri-plugin-fs = "2.0.0-beta.1"
tauri-plugin-shell = "2.0.0-beta.1"
tauri-plugin-clipboard-manager = "2.0.0-beta.1"


light-utils = { path = "./utils" }

[workspace]
resolver = "2"
members = [
    "src-tauri",
    "p2p",
    "utils",
]

[workspace.package] 
version = "0.1.1"
edition = "2021"
authors = ["DravenK"]
license = "MIT or Apache-2.0"
repository = "https://github.com/dravenk/light"
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "src/**/*.r",
    "proto/**/*.proto",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
]

[profile.release]
lto = "thin"
strip = true
overflow-checks = true

[profile.dev]
debug = true


[profile.heap]
inherits = "release"
debug = true
strip = false
