[package]
name = "light-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
bip39.workspace = true
bip32.workspace = true
rand_core.workspace = true
bitcoin_hashes.workspace = true
bitcoin.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
async-std={ workspace = true,  features = ["attributes", "tokio1"] }
env_logger.workspace = true
chrono.workspace = true
libp2p = {workspace = true, features = [  
    "async-std",  
    "mdns",  
    "tokio",  
    "noise",  
    "macros",  
    "tcp",  
    "yamux",  
    "quic",  
    "cbor",  
    "request-response",  
    "gossipsub",
    "identify",
    "ping",
    "relay"
] }

[lib]
crate-type = ["cdylib", "rlib"]