[package]
name = "light"
version = "0.1.1"
description = "A Tauri App"
authors = ["dravenk"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-cli = "1.5.9"
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]

wallet = { path = "../wallet" }
p2p = { path = "../p2p" }
util = { path = "../util" }

yew = { workspace = true }
serde-wasm-bindgen  = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
bip39  = { workspace = true }
bip32  = { workspace = true }
rand_core  = { workspace = true }
wasm-logger  = { workspace = true }
wasm-bindgen  = { workspace = true }
bitcoin_hashes  = { workspace = true }
bitcoin  = { workspace = true }
tokio  = { workspace = true }
async-trait  = { workspace = true }
futures = { workspace = true }
tracing  = { workspace = true }
tracing-subscriber = { workspace = true }
toml  = { workspace = true }
async-std  = { workspace = true }
env_logger  = { workspace = true }
chrono  = { workspace = true }
libp2p  = { workspace = true }

# tauri = { version = "2.0.0-alpha", features = [] }
tauri = {version = "2.0.0-alpha", features = ["devtools"] }
tauri-plugin-fs = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
