[package]
name = "light"
version = "0.1.1"
description = "A Tauri App"
authors = ["dravenk"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-cli =  { workspace = true }
tauri-build =  { workspace = true }

[dependencies]
account = { path = "../utils/account" }
light-p2p = { path = "../p2p" }
light-utils = { path = "../utils" }

yew = { workspace = true }
serde-wasm-bindgen  = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
bip39  = { workspace = true }
bip32  = { workspace = true }
rand_core  = { workspace = true }
wasm-logger  = { workspace = true }
wasm-bindgen  = { workspace = true }
bitcoin_hashes  = { workspace = true }
bitcoin  = { workspace = true }
tokio  = { workspace = true }
async-trait  = { workspace = true }
futures = { workspace = true }
tracing  = { workspace = true }
tracing-subscriber = { workspace = true }
toml  = { workspace = true }
async-std  = { workspace = true }
env_logger  = { workspace = true }
chrono  = { workspace = true }
libp2p  = { workspace = true }
keyring = { workspace = true }
# tauri = {version = "2.0.0-beta.8", features = ["devtools"] }
# tauri-plugin-fs = "2.0.0-beta.1"
# tauri-plugin-shell = "2.0.0-beta.1"
# tauri-plugin-clipboard-manager = "2.0.0-beta.1"

tauri = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-shell =  { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
# crate-type = ["staticlib", "cdylib", "rlib", "lib"]
